--- a/Squirrel/Squirrel.Domain/Resources/ServiceMessages.resx
+++ b/Squirrel/Squirrel.Domain/Resources/ServiceMessages.resx
@@ -138,6 +138,9 @@
   <data name="ConfigService_ConfigNotFound" xml:space="preserve">
     <value>تنظیم مورد نظر یافت نشد.</value>
   </data>
+  <data name="ConfigService_InvalidParent" xml:space="preserve">
+    <value>این پدر برای این گروه قابل انتخاب نیست.</value>
+  </data>
   <data name="FileService_FileNotFount" xml:space="preserve">
     <value>فایل مورد نظر یافت نشد.</value>
   </data>
