--- a/Squirrel/Squirrel.Domain/Resources/ValidationErrors.resx
+++ b/Squirrel/Squirrel.Domain/Resources/ValidationErrors.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="FileAddModel_FileAddress_Required" xml:space="preserve">
+    <value>هیچ فایلی آپلود نشده است.</value>
+  </data>
   <data name="General_RegularExperssion" xml:space="preserve">
     <value>{0} را به درستی وارد کنید.</value>
   </data>
