--- a/Squirrel/Squirrel.Domain/Resources/ServiceMessages.resx
+++ b/Squirrel/Squirrel.Domain/Resources/ServiceMessages.resx
@@ -153,6 +153,9 @@
   <data name="FileService_NoAccess" xml:space="preserve">
     <value>شما به این فایل دسترسی ندارید.</value>
   </data>
+  <data name="FileService_NotExists" xml:space="preserve">
+    <value>فایل مورد نظر پاک شده است.</value>
+  </data>
   <data name="FileService_UnkhownExtension" xml:space="preserve">
     <value>نوع فایل مشخص نیست.</value>
   </data>
